--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "api": "json-server --watch db.json --port 3001",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.4",
+    "json-server": "^0.17.3",
     "moment": "^2.29.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
